[Blink] Simplify CompositedLayerMapping::ComputeGraphicsLayerParentLocation()

This function computes the parent layer location relative to the
parent's snapped border box. Not only this duplicated code from the layer
geometry update functions, the result is incorrect, and the correct
values are already there on the layers.

This CL scrapped all the nonsense and simply use the cached values instead.

BUG=823362

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I36dfa12e7791fe49ce1b20573341a11922c80e09
Reviewed-on: https://chromium-review.googlesource.com/1006395
Commit-Queue: Tien-Ren Chen <trchen@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550843}