third_party/blink/renderer/core/paint/compositing/composited_layer_mapping.h
@@ -200,7 +200,6 @@ class CORE_EXPORT CompositedLayerMapping final : public GraphicsLayerClient {
   void ContentChanged(ContentChangeType);
 
   LayoutRect CompositedBounds() const { return composited_bounds_; }
-  IntRect PixelSnappedCompositedBounds() const;
 
   void PositionOverflowControlsLayers();
 
@@ -356,7 +355,6 @@ class CORE_EXPORT CompositedLayerMapping final : public GraphicsLayerClient {
   // Helper methods to updateGraphicsLayerGeometry:
   void ComputeGraphicsLayerParentLocation(
       const PaintLayer* compositing_container,
-      const IntRect& ancestor_compositing_bounds,
       IntPoint& graphics_layer_parent_location);
   void UpdateSquashingLayerGeometry(
       const IntPoint& graphics_layer_parent_location,
